--- a/theme/header.html
+++ b/theme/header.html
@@ -1,5 +1,5 @@
 <nav>
-   <a href="/page/about.html">About</a> | <a href="/feed.xml">Feed</a>
+   <a href="/page/about.html">About</a> | <a href="/atom.xml">Feed</a>
 </nav>
 
 <h1><a href="/">SIGUSR2</a></h1>
