cleanup   - cleanup parser combinators post   - headshot   - headers -> sans   - more about

--- a/theme/footer.html
+++ b/theme/footer.html
@@ -1,3 +1,4 @@
-<p><a href="http://apgwoz.com">Andrew Gwozdziewycz</a> is a software engineer who likes to tinker with programming languages, distributed systems and security. You can find him on <a href="https://twitter.com/apgwoz">twitter</a> or <a href="https://github.com/apg">GitHub</a>.</p> 
+<p class="headshot"></p>
+<p><a href="http://apgwoz.com">Andrew Gwozdziewycz</a> tinkers with programming languages, distributed systems and security. You can find him on <a href="https://twitter.com/apgwoz">twitter</a> or <a href="https://github.com/apg">GitHub</a>, or read more about him on the <a href="/page/about.html">about page</a>.</p> 
 
 <p class="copyright">&copy; 2006&mdash;present. Licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en_US">CC-BY-SA</a>.</p>
