--- a/theme/header.html
+++ b/theme/header.html
@@ -1,5 +1,6 @@
 <nav>
-   <a href="/page/about.html">About</a> | <a href="/atom.xml">Feed</a>
+  <h1>
+    <a href="/"><img src="/static/img/sqlogo.png" alt="SIGUSR2 logo" /></a>
+    A thing by <a href="http://apgwoz.com">Andrew Gwozdziewycz</a>. <a href="/atom.xml">Subscribe</a>.
+  </h1>
 </nav>
-
-<h1><a href="/">SIGUSR2</a></h1>
