--- a/theme/page.html
+++ b/theme/page.html
@@ -10,7 +10,7 @@
          <?theme include(theme/header.html)?>
       </header>
 
-      <main class="index">
+      <main>
          <header>
             <h2><?theme title?></h2>
          </header>
