--- a/theme/index.html
+++ b/theme/index.html
@@ -3,6 +3,7 @@
 <head>
    <title>SIGUSR2</title>
    <?theme include(theme/head.html)?>
+   <!-- hat-tip Jeff Kreeftmeijer (http://jeffkreeftmeijer.com/), design inspiration -->
 </head>
 <body>
    <div class="wrapper">
