--- a/theme/footer.html
+++ b/theme/footer.html
@@ -1,4 +1,4 @@
 <p class="headshot"></p>
-<p><a href="http://apgwoz.com">Andrew Gwozdziewycz</a> tinkers with programming languages, distributed systems and security. You can find him on <a href="https://twitter.com/apgwoz">twitter</a> or <a href="https://github.com/apg">GitHub</a>, or read more about him on the <a href="/page/about.html">about page</a>.</p> 
+<p>Hi there! You've reached the bottom. Find out more about <a href="http://apgwoz.com">Andrew</a>, or check out the <a href="/page/colophon.html">Colophon</a>. Maybe you'd like to <a href="/atom.xml">subscribe</a>?</p> 
 
 <p class="copyright">&copy; 2006&mdash;present. Licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en_US">CC-BY-SA</a>.</p>
