only put pinned stuff on the homepage.

--- a/theme/footer.html
+++ b/theme/footer.html
@@ -1,4 +1,4 @@
 <p class="headshot"></p>
-<p>Hi there! You've reached the bottom. Find out more about <a href="http://apgwoz.com">Andrew</a>, or check out the <a href="/page/colophon.html">Colophon</a>. Maybe you'd like to <a href="/atom.xml">subscribe</a>?</p> 
+<p>Hi there! You've reached the bottom. Find out more about <a href="http://apgwoz.com">Andrew</a>, or check out the <a href="/page/colophon.html">Colophon</a>. Maybe you'd like to <a href="/atom.xml">subscribe</a>? Are you, for some reason, looking for <a href="/archive.html">everything</a>?</p> 
 
 <p class="copyright">&copy; 2006&mdash;present. Licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en_US">CC-BY-SA</a>.</p>
