Add the how to provide post, which apparently didn't happen before.

--- a/theme/header.html
+++ b/theme/header.html
@@ -1,6 +1,6 @@
 <nav>
   <h1>
     <a href="/"><img src="/static/img/sqlogo.png" alt="SIGUSR2 logo" /></a>
-    An set of rants by <a href="http://apgwoz.com">Andrew Gwozdziewycz</a>. <a href="/atom.xml">Subscribe</a>.
+    A set of rants by <a href="http://apgwoz.com">Andrew Gwozdziewycz</a>. <a href="/atom.xml">Subscribe</a>.
   </h1>
 </nav>
