--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@ Subscribe via <a href="http://sigusr2.net/rss.xml">RSS</a>.
 
 
 <ul>
+  <li><a href="check-for-go-errors.html" title="2019/06/08">Check for Go Errors</a></li>
   <li><a href="combining-time-series.html" title="2019/06/07">Combining Similar Time Series</a></li>
   <li><a href="be-moore-like-chuck.html" title="2019/01/01">Be Moore Like Chuck</a></li>
   <li><a href="slideshow-simple.html" title="2017/11/04">Slideshow Simple</a></li>
