Small layout tweaks.

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,6 @@
 <!-- for rssg -->
-<h1 style="display:none;">SIGUSR2</h1>
-<p>
-Blog-like text by <a href="http://apgwoz.com">Andrew Gwozdziewycz</a>, since 2006.
-</p>
-<p>
-Subscribe via <a href="http://sigusr2.net/rss.xml">RSS</a>.
-</p>
 
+<h3>Index</h3>
 
 <ul>
   <li><a href="check-for-go-errors.html" title="2019/06/08">Check for Go Errors</a></li>
