--- a/src/_header.html
+++ b/src/_header.html
@@ -7,23 +7,30 @@
 <title></title>
 <link rel="alternate" type="application/atom+xml" href="/atom.xml">
 <style type="text/css">
-  body {font: 18px/1.5 sans-serif;background-color: #fffffa;color: #333;}
-  header {max-width: 750px;margin: 0 auto;}
-  @keyframes blinker {from, 49.9% {opacity: 0;} 50%, to {opacity: 1;}}
-  header h1 a {text-decoration: none; color: #333;}
-  header h1 {font-size: 20px;}
-  header h1 .cursor {opacity: 0; animation: blinker 1s linear infinite}
-  article h1, h2, h3 {line-height: 1.3}
+body { margin: 1.5em 1.5em 100px 6em; font-size: 16px; background: #fffffa;color: #333;}
+header { margin: 0 0 3em 0; font-family: monospace; }
+header a { margin: 0 1.5em 0 0; }
+@keyframes blinker {from, 49.9% {opacity: 0;} 50%, to {opacity: 1;}}
+header h1 a {margin: 0; text-decoration: none; color: #333;}
+header h1 {font-size: 1.0em}
+header h1 .cursor {opacity: 0; animation: blinker 1s linear infinite}
+header h1 span { font-size: 1.0em; }
+article { line-height: 1.6; }
+article img { height: 100%; }
+hr {display: block;height: 1px;width: 65%;border: 0;border-top: 1px solid #ccc;margin: 1em 0;padding: 0;}
 
-article {max-width: 750px;line-height: 1.5;margin: 0 auto;font-size: 1.25em;text-align: left;}
-article figure figcaption {font-style: italic;font-size: .8em;}
-footer {width: 600px;margin: 30px auto;}
-footer p {margin-left: 30px;margin-right: 30px;}
-hr {display: block;height: 1px;width: 100%;border: 0;border-top: 1px solid #ccc;margin: 1em 0;padding: 0;}
+@media (max-width: 670px) {
+ body { margin: 1.5em .5em 3em .5em; }
+ article { width: 100% }
+}
+
+@media (min-width: 670px) {
+ article { width: 40em; }
+}
 </style>
 </head>
 <body>
   <header>
-    <h1><a href="/" title="SIGUSR2: home">:SIGUSR2<span class="cursor">▉</span></a></h1>
-</header>
-<article>
+    <h1><a href="/" title="SIGUSR2: home">SIGUSR2<span class="cursor">▉</span></a> <span><a href="/">home</a> <a href="http://apgwoz.com">apg(7)</a> <a href="/colophon.html">colophon</a> <a href="/rss.xml">feed</a></span></h1>
+  </header>
+  <article>
