--- a/src/_header.html
+++ b/src/_header.html
@@ -15,9 +15,10 @@ header h1 a {margin: 0; text-decoration: none; color: #333;}
 header h1 {font-size: 1.0em}
 header h1 .cursor {opacity: 0; animation: blinker 1s linear infinite}
 header h1 span { font-size: 1.0em; }
-article { line-height: 1.6; }
+article p { line-height: 1.6; }
 article img { height: 100%; }
 hr {display: block;height: 1px;width: 65%;border: 0;border-top: 1px solid #ccc;margin: 1em 0;padding: 0;}
+q { font-style: italic; }
 
 @media (max-width: 670px) {
  body { margin: 1.5em .5em 3em .5em; }
