--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <h3>Index</h3>
 
 <ul>
+    <li><a href="eli5-employment-history.html" title="2019/10/18">ELI5: Employment History Edition</a></li>
   <li><a href="check-for-go-errors.html" title="2019/06/08">Check for Go Errors</a></li>
   <li><a href="combining-time-series.html" title="2019/06/07">Combining Similar Time Series</a></li>
   <li><a href="be-moore-like-chuck.html" title="2019/01/01">Be Moore Like Chuck</a></li>
