--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <h3>Index</h3>
 
 <ul>
+    <li><a href="serving-traffic-directly-from-sqlite.html" title="2020/01/20">Serving Traffic "Directly" from SQLite</a></li>
     <li><a href="eli5-employment-history.html" title="2019/10/18">ELI5: Employment History Edition</a></li>
   <li><a href="check-for-go-errors.html" title="2019/06/08">Check for Go Errors</a></li>
   <li><a href="combining-time-series.html" title="2019/06/07">Combining Similar Time Series</a></li>
