--- a/src/index.html
+++ b/src/index.html
@@ -3,28 +3,29 @@
 <h3>Index</h3>
 
 <ul>
-    <li><a href="the-best-part-of-waking-up-sound-board-in-cup.html" title="2020/02/10">The Best Part of Waking Up, is a Sound Board in Your Cup</a></li>
-    <li><a href="serving-traffic-directly-from-sqlite.html" title="2020/01/20">Serving Traffic "Directly" from SQLite</a></li>
-    <li><a href="eli5-employment-history.html" title="2019/10/18">ELI5: Employment History Edition</a></li>
-    <li><a href="check-for-go-errors.html" title="2019/06/08">Check for Go Errors</a></li>
-    <li><a href="combining-time-series.html" title="2019/06/07">Combining Similar Time Series</a></li>
-    <li><a href="be-moore-like-chuck.html" title="2019/01/01">Be Moore Like Chuck</a></li>
-    <li><a href="slideshow-simple.html" title="2017/11/04">Slideshow Simple</a></li>
-    <li><a href="dr-charles-kapps.html" title="2017/10/24">Dr. Charles Kapps</a></li>
-    <li><a href="how-to-provide-help.html" title="2017/08/31">How to Provide Help</a></li>
-    <li><a href="playbooks-arent-written-for-you.html" title="2017/06/22">Playbooks Aren't Written for "You"</a></li>
+    <li><a href="/on-the-missed-opportunities-of-static-types.html" title="2021/02/05">On the Missed Opportunities of Static Types</a></li>
+    <li><a href="/the-best-part-of-waking-up-sound-board-in-cup.html" title="2020/02/10">The Best Part of Waking Up, is a Sound Board in Your Cup</a></li>
+    <li><a href="/serving-traffic-directly-from-sqlite.html" title="2020/01/20">Serving Traffic "Directly" from SQLite</a></li>
+    <li><a href="/eli5-employment-history.html" title="2019/10/18">ELI5: Employment History Edition</a></li>
+    <li><a href="/check-for-go-errors.html" title="2019/06/08">Check for Go Errors</a></li>
+    <li><a href="/combining-time-series.html" title="2019/06/07">Combining Similar Time Series</a></li>
+    <li><a href="/be-moore-like-chuck.html" title="2019/01/01">Be Moore Like Chuck</a></li>
+    <li><a href="/slideshow-simple.html" title="2017/11/04">Slideshow Simple</a></li>
+    <li><a href="/dr-charles-kapps.html" title="2017/10/24">Dr. Charles Kapps</a></li>
+    <li><a href="/how-to-provide-help.html" title="2017/08/31">How to Provide Help</a></li>
+    <li><a href="/playbooks-arent-written-for-you.html" title="2017/06/22">Playbooks Aren't Written for "You"</a></li>
 
 
 
 
 
-    <li><a href="scanabanana.html" title="2015/09/01">Scanabanana</a></li>
-    <li><a href="grapt.html" title="2014/08/17">Grapt</a></li>
-    <li><a href="plotting-points.html" title="2014/07/31">Plotting Points</a></li>
-    <li><a href="a-language-by-any-other-name.html" title="2014/02/10">A Language by Any Other Name</a></li>
-    <li><a href="static-analysis.html" title="2014/01/15">Static Analysis</a></li>
-    <li><a href="a-spreadsheet-is-not-a-database.html" title="2013/09/24">A Spreadsheet is Not a Database</a></li>
-    <li><a href="fabric-not-uniforms.html" title="2012/10/11">Fabric Not Uniforms</a></li>
+    <li><a href="/scanabanana.html" title="2015/09/01">Scanabanana</a></li>
+    <li><a href="/grapt.html" title="2014/08/17">Grapt</a></li>
+    <li><a href="/plotting-points.html" title="2014/07/31">Plotting Points</a></li>
+    <li><a href="/a-language-by-any-other-name.html" title="2014/02/10">A Language by Any Other Name</a></li>
+    <li><a href="/static-analysis.html" title="2014/01/15">Static Analysis</a></li>
+    <li><a href="/a-spreadsheet-is-not-a-database.html" title="2013/09/24">A Spreadsheet is Not a Database</a></li>
+    <li><a href="/fabric-not-uniforms.html" title="2012/10/11">Fabric Not Uniforms</a></li>
 
-    <li><a href="side-projects-and-the-effect-on-your-job.html" title="2012/10/11">Side Projects and Your Full-Time Job</a></li>
+    <li><a href="/side-projects-and-the-effect-on-your-job.html" title="2012/10/11">Side Projects and Your Full-Time Job</a></li>
 </ul>
