--- a/src/_header.html
+++ b/src/_header.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/png" href="/favicon.png">
 <title></title>
-<link rel="alternate" type="application/atom+xml" href="/atom.xml">
+<link rel="alternate" type="application/rss+xml" href="/rss.xml">
 <style type="text/css">
 body { margin: 1.5em 1.5em 100px 6em; font-size: 16px; background: #fffffa;color: #333;}
 header { margin: 0 0 3em 0; font-family: monospace; }
@@ -33,6 +33,6 @@ q { font-style: italic; }
 </head>
 <body>
   <header>
-    <h1><a href="/" title="SIGUSR2: home">SIGUSR2<span class="cursor">▉</span></a> <span><a href="/">home</a> <a href="http://apgwoz.com">apg(7)</a> <a href="/colophon.html">colophon</a> <a href="/rss.xml">feed</a></span></h1>
+    <h1><a href="/" title="SIGUSR2: home">SIGUSR2<span class="cursor">▉</span></a> <span><a href="/">home</a> <a href="/now.html">/now</a> <a href="http://apgwoz.com">apg(7)</a> <a href="/colophon.html">colophon</a> <a href="/feed.xml">feed</a></span></h1>
   </header>
   <article>
