--- a/src/feed.html
+++ b/src/feed.html
@@ -2,6 +2,7 @@
 <h3>Index</h3>
 
 <ul>
+  <li><a href="/senior-engineers.html" title="2025/01/07">Senior Engineers</a></li>
   <li><a href="/metacircular-static-types.html" title="2022/06/08">"Meta-circular" Static Types</a></li>
   <li><a href="/on-the-missed-opportunities-of-static-types.html" title="2021/02/05">On the Missed Opportunities of Static Types</a></li>
   <li><a href="/the-best-part-of-waking-up-sound-board-in-cup.html" title="2020/02/10">The Best Part of Waking Up, is a Sound Board in Your Cup</a></li>
