Add some ex-pat Instagram content.

--- a/src/feed.html
+++ b/src/feed.html
@@ -1,5 +1,5 @@
 <!-- for rssg -->
-<h3>the Feed</h3>
+<h3>the feed</h3>
 
 <ul>
   <li><a href="/senior-engineers.html" title="2025/01/07">Senior Engineers</a></li>
